# bread-final

./: .gitignore  CMakeLists.txt  design_plan.md  implementation_plan.md  readme.md
project-7/: CMakeLists.txt  cmake_old.txt  readme.md  run-tests.sh
project-7/resources/shaders/: bloom.vert  bloom_blur.frag  bloom_bright.frag  bloom_composite.frag  color_grading.frag  default.frag  default.vert  shadow.vert
project-7/scenefiles/: baguette.json  test_cylinder.json  test_scrolling.json
project-7/src/: mainwindow.cpp  realtime.cpp  realtime.h  settings.h
project-7/src/rendering/: InstanceManager.cpp  ShaderManager.h  ShadowManager.cpp  ShadowManager.h
project-7/src/shapes/: Baguette.cpp  Baguette.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Loaf.cpp  Loaf.h  ShapeManager.cpp  ShapeManager.h  Sphere.h
project-7/src/terrain/: TerrainGenerator.cpp  TerrainGenerator.h
project-7/tests/: test_tangent_bitangent.cpp
resources/shaders/: default.frag  default.vert
scenefiles/: test_all_features.json  test_cone.json  test_cube.json  test_fog.json  test_instancing.json  test_normal_mapping.json  test_sphere.json
src/: PerformanceTimer.h  main.cpp  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  settings.h
src/camera/: Camera.cpp  Camera.h
src/rendering/: InstanceManager.cpp  InstanceManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
src/shapes/: Cone.cpp  Cube.cpp  Cylinder.cpp  Cylinder.h  ShapeManager.cpp  ShapeManager.h  Sphere.cpp  Sphere.h
src/shapes2/: Cone.cpp  Cone.h  Cube.cpp  Cylinder.cpp  Cylinder.h  ShapeManager.cpp  ShapeManager.h  Sphere.cpp  Triangle.cpp
src/utils/: scenefilereader.h  sceneparser.cpp  uvmapper.cpp  uvmapper.h
tests/: README.md  test_texture_manager.cpp
